autopartkit (0.64) UNRELEASED; urgency=low

  * Clean up evaluator.c, and make sure only the used symbols are
    exported.
  * Sync fstab format with partconf-mkfstab.
  * Move the fetching of the debconf value listing the table file from
    the main program to the postinst script.  This should make it easier
    to make autopartkit a standalone program.

 -- Petter Reinholdtsen <pere@debian.org>  Tue, 28 Oct 2003 09:51:13 +0100

autopartkit (0.63) unstable; urgency=low

  * Bart Cornelis
    - Updated dutch translation (nl.po)
  * Petter Reinholdtsen
    - Handle disk device paths with multiple 'disc' parts in the
      path. (Closes: #217036)
    - Detect and use it if ped_partition_get_path() is present.
    - Do not set the debconf title.  Leave that to main-menu.

 -- Petter Reinholdtsen <pere@debian.org>  Fri, 24 Oct 2003 16:10:46 +0200

autopartkit (0.62) unstable; urgency=low

  * Kenshi Muto
    - Update Japanese translation (ja.po)
  * Petter Reinholdtsen
    - Depend on lvm10-udeb, to enable LVM support by default.
    - Make sure failing to mount is a fatal error.
    - Correct bug in LVM filesystem creation and mounting, making it
      impossible to use anything but 'ext3' filesystem.
  * Christian Perrier
    - Update French translation.

 -- Petter Reinholdtsen <pere@debian.org>  Sun, 19 Oct 2003 18:11:16 +0200

autopartkit (0.61) unstable; urgency=low

  * Claus Hindsgaul
    - Update da (Danish) translation.
  * Jure Cuhalev
    - Add Slovenian translation. (sl.po). Closes: #215423.
  * Steinar H. Gunderson
    - Add progress bars when creating file systems. (Closes: #209382)
  * Christian Perrier
    - Improve French translation.
  * André Luís Lopes
    - Update pt_BR (Brazilian Portuguese) translation.
  * Petter Reinholdtsen
    - Update nb.po.
  * Miroslav Kure
    - Update Czech translation.

 -- Petter Reinholdtsen <pere@debian.org>  Sat, 18 Oct 2003 19:21:11 +0200

autopartkit (0.60) unstable; urgency=low

  * Alastair McKinstry