@@ -6,6 +6,9 @@ autopartkit (0.64) UNRELEASED; urgency=low
   * Move the fetching of the debconf value listing the table file from
     the main program to the postinst script.  This should make it easier
     to make autopartkit a standalone program.
+  * Pass both minimum and maximum size to the point where LVM logical
+    volumes are created, to make it possible to create larger volumes
+    if space is available.
 
  -- Petter Reinholdtsen <pere@debian.org>  Tue, 28 Oct 2003 09:51:13 +0100
 
